// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
package gedit.promotion;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.promotion.pointscoin.grpc";
option java_outer_classname = "PointsCoinProto";
option objc_class_prefix = "PNTCPRM";

import "gedit/common.proto";

// The promotion pointscoin service definition.
service PointsCoinApi {

    rpc Prepare (PreparePointsCoinRequest) returns (PreparePointsCoinResponse) {
    }
    
    rpc Buy (BuyPointsCoinRequest) returns (PointsCoinResponse) {
    }

    rpc Get (GetPointsCoinRequest) returns (PointsCoinResponse) {
    }

    rpc Search (SearchPointsCoinRequest) returns (stream PointsCoinResponse) {
    }

    rpc List (ListPointsCoinRequest) returns (stream PointsCoinResponse) {
    }

}

message PreparePointsCoinRequest{
    string payeeUuid = 4;
    string payeeStoreUuid = 7;
    int32 coinNumber = 10;
    int32 price = 13;
    int32 shouldPay = 16;
    PaymentChannel channel = 26; //支付通道如支付宝、微信、云闪付
}

message PreparePointsCoinResponse{
    Status status = 999;
    int32 totalCoinsBought = 1; //已被购买的积分宝数量
    int32 totalCoins = 2;       //用于销售的积分宝总数
    int32 totalCoinsAvailable = 3; //可被销售的积分宝数量 = totalCoins - totalCoinsBought
    string channelOrderUuid = 27; //预付单编号，可能由支付通道返回的或平台产生的
}

message BuyPointsCoinRequest {
    string payeeUuid = 4;
    string payeeStoreUuid = 7;
    int32 coinNumber = 8;
    int32 price = 9;
    int32 shouldPay = 10;
    int32 actualPay = 16;

    PaymentChannel channel = 26; //支付通道如支付宝、微信、云闪付
    string channelOrderUuid = 27; //预付单编号，可能由支付通道返回的或平台产生的
}


message PointsCoin{
    string uuid = 1;
    string payeeUuid = 4;
    string payeeStoreUuid = 7;
    int32 coinNumber = 8;
    int32 price = 9;
    int32 shouldPay = 10;
    int32 discount = 13;
    int32 actualPay = 16;

    PaymentChannel channel = 26; //支付通道如支付宝、微信、云闪付
    string channelOrderUuid = 27; //预付单编号，可能由支付通道返回的或平台产生的
    
    int64 created = 60;
}


message ListPointsCoinRequest {
    int32 page = 1;
}

message GetPointsCoinRequest {
    string uuid = 1;
}

message SearchPointsCoinRequest {
    string mobile = 1;
}

message PointsCoinResponse {
    Status status = 999;
    PointsCoin pointsCoin = 1;
}
